# rules_pandoc

./: CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  internal_deps.bzl
.bcr/: metadata.template.json  source.template.json
.github/workflows/: release.yml  release_prep.sh
docs/: BUILD.bazel  rules.md
e2e/smoke/: .bazelversion  BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
pandoc/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
pandoc/private/: BUILD.bazel  pandoc.bzl  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
pandoc/tests/: versions_test.bzl
