module(
    name = "rules_pandoc",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "platforms", version = "0.0.5")

bazel_dep(name = "gazelle", version = "0.29.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "1.32.1", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "6.1.0", dev_dependency = True)

pandoc = use_extension("//pandoc:extensions.bzl", "pandoc")
pandoc.toolchain(pandoc_version = "3.1.2")
use_repo(pandoc, "pandoc_toolchains")

register_toolchains("@pandoc_toolchains//:all")
