# Override http_archive for local testing
local_repository(
    name = "mgred_rules_pandoc",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_pandoc setup #
######################
# Fetches the rules_pandoc dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@mgred_rules_pandoc//pandoc:repositories.bzl", "rules_pandoc_dependencies")

rules_pandoc_dependencies()
