# Override http_archive for local testing
local_repository(
    name = "rules_pandoc",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_pandoc setup #
######################
# Fetches the rules_pandoc dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@rules_pandoc//pandoc:repositories.bzl", "rules_pandoc_dependencies", "pandoc_register_toolchains", "LATEST_PANDOC_VERSION")

rules_pandoc_dependencies()

pandoc_register_toolchains(
    name = "pandoc3_1",
    pandoc_version = LATEST_PANDOC_VERSION,
)
