load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "pandoc",
    srcs = ["pandoc.bzl"],
    visibility = ["//pandoc:__subpackages__"],
    deps = [
        "@aspect_bazel_lib//lib:expand_make_vars",
        "@mgred_bazel_lib//:defs",
    ],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//pandoc:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//pandoc:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//pandoc:__subpackages__"],
)
